# 4D-Humans

./: demo.py  gradio_app.py  pyproject.toml
hmr2/datasets/: vitdet_dataset.py
