[project]
name = "4d-humans"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "chumpy",
    "debugpy>=1.8.13",
    "detectron2",
    "dill>=0.3.9",
    "einops>=0.8.1",
    "gdown>=5.2.0",
    "numpy>=2.2.4",
    "omegaconf>=2.3.0",
    "opencv-python>=4.11.0.86",
    "pandas>=2.2.3",
    "pyrender>=0.1.45",
    "pytorch-lightning>=2.5.1",
    "scikit-image>=0.25.2",
    "smplx>=0.1.28",
    "timm>=1.0.15",
    "torch>=2.6.0",
    "torchvision>=0.21.0",
    "webdataset>=0.2.111",
    "yacs>=0.1.8",
]

[tool.uv.sources]
chumpy = { git = "https://github.com/howird/chumpy" }
detectron2 = { git = "https://github.com/facebookresearch/detectron2" }
